# CircuitSimulator

./: CMakeLists.txt  CircuitSimulator.sln  README.md
.github/workflows/: cmake_multi_platform.yml
CircuitSimulator/: CMakeLists.txt  CircuitSimulator.vcxproj  CircuitSimulator.vcxproj.filters
CircuitSimulator/Core/Engine/: Application.cpp  Application.h  ApplicationStatics.h  GameObject.cpp  GameObject.h  GameObjectManager.cpp  GameObjectManager.h  RenderManager.cpp  RenderManager.h  Singleton.cc
CircuitSimulator/Core/NElectro/: Arduino.cpp  Arduino.h  Bulb.cpp  Bulb.h  DCMotor.cpp  DCMotor.h  Pin.cpp  Pin.h  PushButton.cpp  PushButton.h  SimulatorApplication.h  Wire.cpp  Wire.h
CircuitSimulator/Core/Physics/: CollisionRect.cpp  CollisionRect.h
CircuitSimulator/Core/SDLWrapper/: Camera.h  IMoveable.h  Line2d.cpp  Line2d.h  MMath.h  Rect.cpp  Rect.h  RenderedObject.cpp  RenderedObject.h  RenderingUtils.h  Transform2d.cpp  Transform2d.h  TransformComponent.cpp  TransformComponent.h  Vector2.cpp  Vector2.h  WImage.cpp  WImage.h
CircuitSimulator/Dependencies/SDL2_gfx-1.0.4/: SDL2_gfx.vcxproj
CircuitSimulator/User/: Main.cpp  RootGameObject.cpp  SimulatorApplication.cpp  UserArduino.h
CircuitSimulatorDemo/: CMakeLists.txt  CircuitSimulatorDemo.vcxproj  CircuitSimulatorDemo.vcxproj.filters
CircuitSimulatorDemo/User/: Main.cpp  RootGameObject.cpp  RootGameObject.h  UserArduino.cpp
